Fixed some typo

--- a/fonctionDUneVariableRelle.tex
+++ b/fonctionDUneVariableRelle.tex
@@ -155,7 +155,7 @@ $\lm_{a} f \in ]0, +\infty] \implies f \text{minorée} \voi{a}
 \begin{itemize}
     \item 
     \begin{att}
-    On ne peut pas passer à la limite dans un inégalité que si l'on
+    On ne peut passer à la limite dans un inégalité que si l'on
     sait que les limites existent!!
     \end{att}
     \item
