--- a/skeleton.tex
+++ b/skeleton.tex
@@ -12,19 +12,19 @@
 
 \newcommand{\ssi}{si et seulement si}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\C}{\mathbb{C}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\resu}{(u_n)_{n \in \N} \in \R^\N}
 \newcommand{\allent}{\forall n \in \N}
-\newcommand{\et}{\text{ et }}
-\newcommand{\ou}{\text{ ou }}
-\newcommand{\tq}{\text{ tel que }}
+\newcommand{\et}{\;\;\text{ et }\;\;}
+\newcommand{\ou}{\;\;\text{ ou }\;\;}
+\newcommand{\tq}{\;\;\text{ tel que }\;\;}
 \newcommand{\lm}{\lim\limits}
 \newcommand{\voi}[1]{\text{ au voisinage de }#1}
 \newcommand{\bs}[1]{\boldsymbol{#1}}
 \newcommand{\equ}[1][]{\underset{#1}{\sim}}
 \newcommand{\ex}{\mathrm{e}}
-\newcommand{\e}{\mathrm{ln}}
 \newcommand{\co}[1]{\mathrm{C^{#1}}}
 \newcommand{\lminf}{\lm_{n \to \infty}}
 \newcommand{\notimplies}{\centernot\implies}
@@ -35,10 +35,18 @@
 \newcommand{\strmo}{\text{ strictement monotone }}
 \newcommand{\mo}{\text{ monotone }}
 \newcommand{\sur}{\text{ sur }}
+\newcommand{\drv}{\text{ dérivable }}
+\newcommand{\e}{\!\!}
+\newcommand{\exs}{\text{ existe }}
+\newcommand{\fn}{\text{ finie }}
+\newcommand{\ngl}[2]{\negl_{#1}\!\!\!(#2)}
+\newcommand{\lips}{\text{ lipschitzienne }}
 
 \DeclareMathOperator{\ch}{ch}
 \DeclareMathOperator{\tah}{th}
 \DeclareMathOperator{\sh}{sh}
+\DeclareMathOperator{\dl}{DL}
+\DeclareMathOperator*{\negl}{o}
 
 \newenvironment{att}
 {\bgroup \color{red}{\Large\textbf{Attention}}\\}
@@ -68,12 +76,3 @@
 \newenvironment{cor}[1][]
 {\begin{coro}[#1]\quad\\}
 {\end{coro}}
-
-
-\title{Title}
-
-\begin{document}
-\maketitle
-\pagebreak
-
-\end{document}
