Seperated Skeleton from tex files

--- a/fonctionDUneVariableRelle.tex
+++ b/fonctionDUneVariableRelle.tex
@@ -1,73 +1,4 @@
-\documentclass{article}
-
-\usepackage[utf8]{inputenc}
-\usepackage[francais]{babel}
-\usepackage{amssymb}
-\usepackage{amsmath}
-\usepackage{amsthm}
-\usepackage{color}
-\usepackage{centernot}
-
-\everymath{\displaystyle}
-
-\newcommand{\ssi}{si et seulement si}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\resu}{(u_n)_{n \in \N} \in \R^\N}
-\newcommand{\allent}{\forall n \in \N}
-\newcommand{\et}{\text{ et }}
-\newcommand{\ou}{\text{ ou }}
-\newcommand{\tq}{\text{ tel que }}
-\newcommand{\lm}{\lim\limits}
-\newcommand{\voi}[1]{\text{ au voisinage de }#1}
-\newcommand{\bs}[1]{\boldsymbol{#1}}
-\newcommand{\equ}[1][]{\underset{#1}{\sim}}
-\newcommand{\ex}{\mathrm{e}}
-\newcommand{\e}{\mathrm{ln}}
-\newcommand{\co}[1]{\mathrm{C^{#1}}}
-\newcommand{\lminf}{\lm_{n \to \infty}}
-\newcommand{\notimplies}{\centernot\implies}
-\newcommand{\en}{\text{ en }}
-\newcommand{\est}{\text{ est }}
-\newcommand{\drt}{\text{ à droite de }}
-\newcommand{\gch}{\text{ à gauche de }}
-\newcommand{\strmo}{\text{ strictement monotone }}
-\newcommand{\mo}{\text{ monotone }}
-\newcommand{\sur}{\text{ sur }}
-
-\DeclareMathOperator{\ch}{ch}
-\DeclareMathOperator{\tah}{th}
-\DeclareMathOperator{\sh}{sh}
-
-\newenvironment{att}
-{\bgroup \color{red}{\Large\textbf{Attention}}\\}
-{\egroup}
-
-\theoremstyle{definition}
-\newtheorem*{prop}{Proposition}
-\newtheorem*{defin}{Définition}
-\theoremstyle{remark}
-\newtheorem*{rema}{Remarque}
-\theoremstyle{plain}
-\newtheorem*{them}{Théorème}
-\newtheorem*{coro}{Corollaire}
-
-\newenvironment{prp}[1][]
-{\begin{prop}[#1]\quad\\}
-{\end{prop}}
-\newenvironment{dfn}[1][]
-{\begin{defin}[#1]\quad\\}
-{\end{defin}}
-\newenvironment{rem}[1][]
-{\begin{rema}[#1]\quad\\}
-{\end{rema}}
-\newenvironment{thm}[1][]
-{\begin{them}[#1]\quad\\}
-{\end{them}}
-\newenvironment{cor}[1][]
-{\begin{coro}[#1]\quad\\}
-{\end{coro}}
+\input{skeleton}
 
 \title{Fonction d'une variable réelle, limite et continuité}
 
