--- a/skeleton.tex
+++ b/skeleton.tex
@@ -34,6 +34,8 @@
 \newcommand{\gch}{\text{ à gauche de }}
 \newcommand{\strmo}{\text{ strictement monotone }}
 \newcommand{\mo}{\text{ monotone }}
+\newcommand{\cro}{\text{ croissante }}
+\newcommand{\dec}{\text{ décroissante }}
 \newcommand{\sur}{\text{ sur }}
 \newcommand{\drv}{\text{ dérivable }}
 \newcommand{\e}{\!\!}
