Space after command

--- a/skeleton.tex
+++ b/skeleton.tex
@@ -7,10 +7,11 @@
 \usepackage{amsthm}
 \usepackage{color}
 \usepackage{centernot}
+\usepackage{xspace}
 
 \everymath{\displaystyle}
 
-\newcommand{\ssi}{si et seulement si}
+\newcommand{\ssi}{si et seulement si\xspace}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\N}{\mathbb{N}}
@@ -43,6 +44,7 @@
 \newcommand{\fn}{\text{ finie }}
 \newcommand{\ngl}[2]{\negl_{#1}\!\!\!(#2)}
 \newcommand{\lips}{\text{ lipschitzienne }}
+\newcommand{\lci}{loi de composition interne\xspace}
 
 \DeclareMathOperator{\ch}{ch}
 \DeclareMathOperator{\tah}{th}
