--- a/src/structures.tex
+++ b/src/structures.tex
@@ -45,6 +45,15 @@ La loi de composition interne $*$ dans $E$
 Si $E$ admet un élément neutre pour $*$, il est unique.
 \end{prp}
 
+\begin{dfn}
+Soit $E$ et $2$ \lci $*$ et $#$, $*$ est distributive par rapport à
+$#$ \ssi
+\[
+    \forall (x, y, z) \in E^3 \\
+    x * (y # z) = (x * y) # (x * z) \et (y # z) * x = (y * x) # (z * x)
+\]
+\end{dfn}
+
 \section{Groupe}
 
 \begin{dfn}[Groupe]
@@ -94,5 +103,6 @@ $H$ est un sous-groupe de $(G, *)$ \ssi
 \begin{rem}
 Si $H$ est un sous-groupe de $(G, *)$ alors $e_H = e_G$
 \end{rem}
+
 
 \end{document}
